2006-04-08 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.2.0 released.

    This is an add-on features version:
    - add toggle button ability to a dual multi-select boxes.

2005-12-01 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.1.0 released.

    This is an add-on features version:
    - add ability to select/unselect all items in one stroke, and also toggle selection.

2005-11-21 Laurent Laville <pear@laurent-laville.org>

    * Added new example (qfams_custom_7.php) on custom category : demonstrate
      extended buttons feature (select all, select none, toggle selection)

2005-09-14 Laurent Laville <pear@laurent-laville.org>

    * uses server side validation, and addGroupRule() to validate the QFAMS element
      into template 1 example (qfams_template_1.php)

    * Fixed custom 4 example (qfams_custom_4.php) and avoid notice error
      with QuickForm 3.2.5
      => we should use addGroupRule() with a QFAMS element

2005-09-01 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 1.0.0 released.

    This is the first public stable release of the HTML_QuickForm_advmultiselect
    PEAR package.
    Its include english many html pages version of "The Definitive Guide".
    A guide to and reference for both beginner and expert users.

2005-08-31 Laurent Laville <pear@laurent-laville.org>

    * Added new example on basic category : demonstrate the db (data set) loading feature

2005-08-27 Laurent Laville <pear@laurent-laville.org>

    * Fixed bug #5216: Warning: Invalid argument supplied for foreach()

    * Fixed two other problems with array and foreach(), bug #5216 related

2005-08-18 Laurent Laville <pear@laurent-laville.org>

    * Added @example tag to have ability to display (highlight) source code

    * Added @link tag to have ability to display a screenshot (PNG image)

2005-08-05 Laurent Laville <pear@laurent-laville.org>

    * VERSION: Version 0.5.1 released.
