@@ -8,17 +8,17 @@
 *
 * PHP versions 4 and 5
 *
-* LICENSE: This source file is subject to version 3.0 of the PHP license
+* LICENSE: This source file is subject to version 3.01 of the PHP license
 * that is available through the world-wide-web at the following URI:
-* http://www.php.net/license/3_0.txt.  If you did not receive a copy of
+* http://www.php.net/license/3_01.txt.  If you did not receive a copy of
 * the PHP License and are unable to obtain it through the web, please
 * send a note to license@php.net so we can mail you a copy immediately.
 *
 * @category   HTML
 * @package    HTML_QuickForm_advmultiselect
 * @author     Laurent Laville <pear@laurent-laville.org>
-* @copyright  1997-2005 The PHP Group
-* @license    http://www.php.net/license/3_0.txt  PHP License 3.0
+* @copyright  2005-2006 Laurent Laville
+* @license    http://www.php.net/license/3_01.txt  PHP License 3.01
 * @version    CVS: $Id$
 * @link       http://pear.php.net/package/HTML_QuickForm_advmultiselect
 */
@@ -70,8 +70,8 @@ if (!defined('PHP_EOL')) {
 * @category   HTML
 * @package    HTML_QuickForm_advmultiselect
 * @author     Laurent Laville <pear@laurent-laville.org>
-* @copyright  1997-2005 The PHP Group
-* @license    http://www.php.net/license/3_0.txt  PHP License 3.0
+* @copyright  2005-2006 Laurent Laville
+* @license    http://www.php.net/license/3_01.txt  PHP License 3.01
 * @version    Release: @package_version@
 * @link       http://pear.php.net/package/HTML_QuickForm_advmultiselect
 */
